--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
     
 *{
-    border: solid 1px rgb(255, 1, 1);
+    // border: solid 1px rgb(255, 1, 1);
 
     box-sizing: border-box;
 
@@ -51,7 +51,7 @@ header{
         position: absolute;
         width: 100vw;
         max-width: 100%;
-        height: 100vh;
+        // height: 100vh;
         top: 0;
         right: 0;
 
