--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -54,7 +54,7 @@ header{
         max-width: 100%;
         // height: 100vh;
         top: 0;
-        right: 0;
+        right: 16px;
 
         .ham_btn{
             z-index: 16;
@@ -459,4 +459,23 @@ section a:hover{
     background-color: #fff;
     border: 3px solid $main_color;
     color: $text_color;
+}
+
+/*-----clicked style-----*/
+
+.btn_line_clicked::before, .btn_line_clicked::after{
+    display: none;
+}
+
+.line01_clicked{
+    transform: rotate(45deg);
+    position: absolute;
+    top: 50%;
+
+    transition-duration: 0.3s;
+}
+.line02_clicked{
+    transform: rotate(-45deg);
+
+    transition-duration: 0.3s;
 }
