--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -89,6 +89,8 @@ header{
                 height: 3px;
                 background-color: rgba(255, 255, 255, 1);
                 border-radius: 2px;
+
+                transition-duration: 0.3s;
             }
         }
     }
@@ -102,6 +104,9 @@ header{
     height: 3px;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 1);
+
+    transition-duration: 0.3s;
+
 }
 .btn_line::after{
     content: '';
@@ -112,11 +117,15 @@ header{
     height: 3px;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 1);
+
+    transition-duration: 0.3s;
+
 }
 
 /*-----menu body-----*/
 
 .menu_body{
+    transition-duration: 0.5s;
 
     position: absolute;
     top: -16px;
@@ -208,10 +217,15 @@ header{
         }
 
         .menu_btn01{
+            transition-duration: 0.3s;
+
             background-color: $main_color;
+            border: 3px solid #fff;
             color: #fff;
         }
         .menu_btn02{
+            transition-duration: 0.3s;
+
             background-color: #fff;
             color: $text_color;
             border: 3px solid $main_color;
@@ -229,6 +243,8 @@ header{
     position: relative;
 
     .down_arrow{
+        animation-timing-function: ease-out;
+
         width: 56px;
         height: 56px;
         position: absolute;
@@ -259,6 +275,8 @@ header{
             margin-bottom: 100px;
 
             font-size: 30px;
+
+            animation: text 1s infinite;
         }
         .title02{
             position: absolute;
@@ -270,6 +288,8 @@ header{
             margin-bottom: 40px;
 
             font-size: 30px;
+
+            animation: text 1.3s infinite;
         }
         .title03{
             position: absolute;
@@ -279,6 +299,8 @@ header{
             padding: 2px;
 
             font-size: 18px;
+
+            animation: text 1.6s infinite;
         }
     }
 }
@@ -294,6 +316,30 @@ section{
 }
 .intro{
     margin: 0 auto;
+}
+
+.Web_learning{
+    position: relative;
+    z-index: 0;
+}
+
+.one{
+    position: absolute;
+    top: 140px;
+    left: -30px;
+    opacity: 0.5;
+    z-index: -1;
+
+    width: 200px;
+}
+.two{
+    position: absolute;
+    top: 320px;
+    right: -30px;
+    opacity: 0.5;
+    z-index: -1;
+
+    width: 200px;
 }
 
 .Web_title{
@@ -341,6 +387,8 @@ p{
 
     background-color: #fff;
     border: 3px solid $main_color;
+
+    transition-duration: 0.3s;
 }
 
 .test_all{
@@ -457,13 +505,46 @@ footer{
 
 section a:hover{
     background-color: $main_color;
-    border: 3px solid #fff;
+    border: 3px solid $main_color;
     color: #fff;
+
+    transition-duration: 0.3s;
 }
 .test_link:hover{
     background-color: #fff;
     border: 3px solid $main_color;
     color: $text_color;
+
+    transition-duration: 0.3s;
+}
+
+.menu_link li a:hover{
+    background-color: $main_color;
+    // border: 3px solid $bg_color;
+    color: #fff;
+
+    transition-duration: 0.3s;
+}
+
+.menu_btn li .menu_btn01:hover{
+    background-color: #fff;
+    border: 3px solid $main_color;
+    color: #343434;
+
+    transition-duration: 0.3s;
+
+}
+.menu_btn li .menu_btn02:hover{
+    background-color: $main_color;
+    border: 3px solid $main_color;
+    color: #fff;
+
+    transition-duration: 0.3s;
+
+}
+
+.footer_link a:hover{
+    color: $base_color;
 }
 
 /*-----clicked style-----*/
@@ -472,6 +553,7 @@ section a:hover{
     transform: rotate(45deg);
     position: absolute;
     top: 50%;
+    background-color: $base_color;
 
     transition-duration: 0.3s;
 }
@@ -479,6 +561,7 @@ section a:hover{
     transform: rotate(-45deg);
     position: absolute;
     top: 50%;
+    background-color: $base_color;
 
     transition-duration: 0.3s;
 }
@@ -486,4 +569,51 @@ section a:hover{
     background-color: rgba(255, 255, 255, 0) !important;
 
     transition-duration: 0.3s;
+}
+
+.menu_body_clicked{
+    transition-duration: 0.5s;
+
+    right: 0;
+    opacity: 1;
+    overflow: hidden;
+}
+
+/*-----animatiom-----*/
+
+.down_arrow{
+    animation: arrow 1.3s infinite;
+}
+
+@keyframes arrow{
+    0%{
+        bottom: 70px;
+    }
+    50%{
+        bottom: 80px;
+    }
+    60%{
+        bottom: 70px;
+    }
+    70%{
+        bottom: 60px;
+    }
+    80%{
+        bottom: 50px;
+    }
+    100%{
+        bottom: 70px;
+    }
+}
+
+@keyframes text{
+    0%{
+        right: 16px;
+    }
+    50%{
+        right: 24px;
+    }
+    100%{
+        right: 16px;
+    }
 }
