--- a/CSS/TopCSS/index.css
+++ b/CSS/TopCSS/index.css
@@ -1,12 +1,10 @@
 @charset "UTF-8";
 * {
   font-family: MS Pゴシック;
-  font-family: Montserrat;
 }
 
 body {
-  position: relative;
-  max-width: 390px;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
 }
@@ -26,8 +24,7 @@ header {
   top: 0;
   transform: translate(-50%);
   display: flex;
-  width: 100vw;
-  max-width: 390px;
+  width: 100%;
   height: 80px;
 }
 header .logo {
@@ -183,6 +180,10 @@ header .ham_menu .ham_btn .btn_line {
 }
 
 /*-----Key Visual-----*/
+main {
+  width: 100%;
+}
+
 .KV {
   height: 844px;
   width: auto;
@@ -365,7 +366,6 @@ p {
 /*-----footer-----*/
 footer {
   width: 100%;
-  max-width: 390px;
   height: 340px;
   display: flex;
   flex-direction: column;
