--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -5,7 +5,8 @@
 
     // box-sizing: border-box;
 
-    font-family: MS Pゴシック;
+    font-family: Montserrat, ヒラギノ角ゴシック;
+    // font-family: ヒラギノ角ゴシック;
     // font-family: Montserrat;
 }
 
