--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -5,9 +5,9 @@
 
     // box-sizing: border-box;
 
-    font-family: Montserrat, ヒラギノ角ゴシック;
-    // font-family: ヒラギノ角ゴシック;
-    // font-family: Montserrat;
+    font-family: a-otf-jun-pro, sans-serif;
+    font-style: normal;
+    font-weight: 300;
 }
 
 $base_color: #1361A5;
