--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -7,7 +7,7 @@
 
     font-family: a-otf-jun-pro, sans-serif;
     font-style: normal;
-    font-weight: 300;
+    // font-weight: 300;
 }
 
 $base_color: #1361A5;
@@ -232,10 +232,6 @@ header{
 
 /*-----Key Visual-----*/
 
-main{
-    width: 100%;
-}
-
 .KV{
     height: 844px;
     width: auto;
@@ -308,6 +304,7 @@ main{
 
 /*-----section text-----*/
 main{
+    width: 100%;
     background-color: $bg_color;
 }
 
