--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -458,7 +458,6 @@ footer{
 
     .footer_link{
         margin: 0 auto;
-        font-size: 14px;
         width: 80%;
         display: flex;
         justify-content: center;
@@ -476,6 +475,7 @@ footer{
             color: $text_color;
         }
         p{
+            font-size: 14px;
             margin: 0;
             padding: 0;
             text-align: left;
@@ -503,6 +503,10 @@ footer{
         background-color: $base_color;
 
         height: 80px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
 }
