--- a/CSS/IntroCSS/intro.css
+++ b/CSS/IntroCSS/intro.css
@@ -1,4 +1,5 @@
 * {
+  box-sizing: border-box;
   font-family: a-otf-jun-pro, sans-serif;
   font-style: normal;
 }
@@ -26,7 +27,7 @@ header {
   display: flex;
   width: 100%;
   height: 80px;
-  border-bottom: 5px solid #1361A5;
+  border-bottom: 5px solid #73B7BB;
   background-color: #ffffff;
 }
 header .logo {
@@ -179,8 +180,253 @@ header .ham_menu .ham_btn .btn_line {
   border: 3px solid #73B7BB;
 }
 
+/*-----content-----*/
 main {
+  position: relative;
   width: 100%;
   background-color: #ffffff;
   margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+main h1 {
+  font-size: 30px;
+  text-align: center;
+  margin: 48px 0 32px 0;
+}
+main .block {
+  margin: 0 auto;
+  display: flex;
+  width: 90%;
+  height: 10px;
+  background-color: #1361A5;
+  border-radius: 20px;
+}
+main h2 {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: normal;
+  text-align: center;
+  padding: 32px 0;
+}
+main .webdesign_intro {
+  font-size: 14px;
+  line-height: 32px;
+}
+main .webdesign_intro p {
+  padding: 0 16px 16px 16px;
+}
+main .webdesign_intro img {
+  border: 5px solid #ffffff;
+  z-index: 1;
+}
+main .webdesign_intro .img {
+  position: relative;
+  width: 300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+main .webdesign_intro .img01 {
+  padding-top: 40px;
+  right: -16px;
+}
+main .webdesign_intro .img01::before {
+  content: "";
+  width: 300px;
+  height: 180px;
+  background-color: #1361A5;
+  position: absolute;
+  top: 10px;
+  left: -32px;
+  z-index: 0;
+}
+main .webdesign_intro .img03 {
+  padding-bottom: 40px;
+  left: -16px;
+}
+main .webdesign_intro .img03::before {
+  content: "";
+  width: 300px;
+  height: 180px;
+  background-color: #1361A5;
+  position: absolute;
+  bottom: 10px;
+  right: -32px;
+  z-index: 0;
+}
+
+.class_intro {
+  position: relative;
+  padding-bottom: 80px;
+}
+.class_intro p {
+  font-size: 16px;
+  text-align: center;
+  padding: 56px 0;
+}
+.class_intro ul {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+  gap: 56px;
+  z-index: 1;
+}
+.class_intro ul li {
+  display: flex;
+}
+.class_intro ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 290px;
+  height: 60px;
+  text-decoration: none;
+  color: #343434;
+  background-color: #ffffff;
+  border: 3px solid #73B7BB;
+  border-radius: 30px;
+  z-index: 1;
+  transition-duration: 0.3s;
+}
+.class_intro img {
+  position: absolute;
+  z-index: 0;
+  width: 230px;
+  height: auto;
+  bottom: 0;
+  right: 0;
+  z-index: 0;
+  opacity: 0.5;
+}
+
+.test_lead {
+  padding: 56px 16px 56px 16px;
+  background-color: #1361A5;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.test_lead p {
+  font-size: 16px;
+  line-height: 32px;
+  text-align: center;
+}
+.test_lead a {
+  margin: 48px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 290px;
+  height: 60px;
+  text-decoration: none;
+  color: #343434;
+  background-color: #ffffff;
+  border: 3px solid #73B7BB;
+  border-radius: 30px;
+  transition-duration: 0.3s;
+}
+.test_lead img {
+  width: 80px;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+/*-----footer-----*/
+footer {
+  width: 100%;
+  height: 340px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  border-top: 3px solid #1361A5;
+  background-color: #ffffff;
+}
+footer .footer_link {
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+footer .footer_link .footer_link_a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+footer .footer_link a {
+  text-decoration: none;
+  color: #343434;
+  padding: 4px;
+}
+footer .footer_link p {
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+footer .jec_logo_footer {
+  margin: 40px auto;
+  display: flex;
+  justify-content: center;
+  width: 200px;
+}
+footer .jec_logo_footer img {
+  width: 200px;
+}
+footer .copyright {
+  font-size: 12px;
+  color: #ffffff;
+  text-align: center;
+  margin: 0;
+  background-color: #1361A5;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*-----hover-----*/
+main a:hover, main ul > li > a:hover {
+  background-color: #73B7BB;
+  color: #ffffff;
+  transition-duration: 0.3s;
+}
+
+.footer_link a:hover {
+  color: #1361A5;
+}
+
+/*-----clicked style-----*/
+.btn_line_clicked::before {
+  transform: rotate(45deg);
+  position: absolute;
+  top: 50%;
+  background-color: #1361A5;
+  transition-duration: 0.3s;
+}
+
+.btn_line_clicked::after {
+  transform: rotate(-45deg);
+  position: absolute;
+  top: 50%;
+  background-color: #1361A5;
+  transition-duration: 0.3s;
+}
+
+.btn_line_clicked {
+  background-color: rgba(255, 255, 255, 0) !important;
+  transition-duration: 0.3s;
+}
+
+.menu_body_clicked {
+  transition-duration: 0.5s;
+  right: 0;
+  opacity: 1;
+  overflow: hidden;
 }/*# sourceMappingURL=intro.css.map */
