--- a/CSS/TopCSS/index.css
+++ b/CSS/TopCSS/index.css
@@ -371,7 +371,6 @@ footer {
 }
 footer .footer_link {
   margin: 0 auto;
-  font-size: 14px;
   width: 80%;
   display: flex;
   justify-content: center;
@@ -388,6 +387,7 @@ footer .footer_link a {
   color: #343434;
 }
 footer .footer_link p {
+  font-size: 14px;
   margin: 0;
   padding: 0;
   text-align: left;
@@ -407,6 +407,9 @@ footer .copyright {
   margin: 0;
   background-color: #1361A5;
   height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*-----hover-----*/
