--- a/CSS/firstCSS/curricula_first.css
+++ b/CSS/firstCSS/curricula_first.css
@@ -210,16 +210,16 @@ section .coding > ul,
 section .design > ul,
 section .basic > ul {
   margin: 0 auto;
+  margin-bottom: 16px;
   width: 90%;
   list-style: none;
   background-color: rgba(115, 183, 187, 0.3);
   border-radius: 20px;
   height: 160px;
-  margin: 16px;
   /*-----overflow ... -----*/
   display: -webkit-box;
   overflow: hidden;
-  -webkit-line-clamp: 4;
+  -webkit-line-clamp: 3;
   word-break: break-all;
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
