--- a/CSS/firstCSS/curricula_first.css
+++ b/CSS/firstCSS/curricula_first.css
@@ -219,7 +219,7 @@ section .basic > ul {
   /*-----overflow ... -----*/
   display: -webkit-box;
   overflow: hidden;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 4;
   word-break: break-all;
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
@@ -267,6 +267,90 @@ h2::after {
   right: 20%;
 }
 
-img {
+.content > ul > li > ul {
   display: none;
+}
+
+/*-----footer-----*/
+footer {
+  width: 100%;
+  height: 340px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  border-top: 3px solid #1361A5;
+  background-color: #ffffff;
+}
+footer .footer_link {
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+footer .footer_link .footer_link_a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+footer .footer_link a {
+  text-decoration: none;
+  color: #343434;
+  padding: 4px;
+}
+footer .footer_link p {
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+footer .jec_logo_footer {
+  margin: 40px auto;
+  display: flex;
+  justify-content: center;
+  width: 200px;
+}
+footer .jec_logo_footer img {
+  width: 200px;
+}
+footer .copyright {
+  font-size: 12px;
+  color: #ffffff;
+  text-align: center;
+  margin: 0;
+  background-color: #1361A5;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*-----clicked style-----*/
+.btn_line_clicked::before {
+  transform: rotate(45deg);
+  position: absolute;
+  top: 50%;
+  background-color: #1361A5;
+  transition-duration: 0.3s;
+}
+
+.btn_line_clicked::after {
+  transform: rotate(-45deg);
+  position: absolute;
+  top: 50%;
+  background-color: #1361A5;
+  transition-duration: 0.3s;
+}
+
+.btn_line_clicked {
+  background-color: rgba(255, 255, 255, 0) !important;
+  transition-duration: 0.3s;
+}
+
+.menu_body_clicked {
+  transition-duration: 0.5s;
+  right: 0;
+  opacity: 1;
+  overflow: hidden;
 }/*# sourceMappingURL=curricula_first.css.map */
