--- a/CSS/firstCSS/curricula_first.scss
+++ b/CSS/firstCSS/curricula_first.scss
@@ -287,7 +287,7 @@ section{
         /*-----overflow ... -----*/
         display: -webkit-box;
         overflow: hidden;
-        -webkit-line-clamp: 3;
+        -webkit-line-clamp: 4;
         word-break: break-all;
         text-overflow: ellipsis;
         -webkit-box-orient: vertical;
@@ -346,6 +346,109 @@ h2::after{
     right: 20%;
 }
 
-img{
+.content > ul > li > ul{
     display: none;
+}
+
+/*-----footer-----*/
+
+footer{
+    width: 100%;
+    // max-width: 390px;
+    height: 340px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+
+    border-top: 3px solid $base_color;
+    background-color: $bg_color;
+
+    .footer_link{
+        margin: 0 auto;
+        width: 80%;
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+
+        .footer_link_a {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: start;
+        }
+
+        a{
+            text-decoration: none;
+            color: $text_color;
+
+            padding: 4px;
+        }
+        p{
+            font-size: 14px;
+            margin: 0;
+            padding: 0;
+            text-align: left;
+        }
+    }
+
+    .jec_logo_footer{
+        margin: 40px auto;
+        display: flex;
+        justify-content: center;
+
+        width: 200px;
+
+        img{
+            width: 200px;    
+        }
+    }
+
+    .copyright{
+        font-size: 12px;
+        color: $bg_color;
+        text-align: center;
+
+        margin: 0;
+
+        background-color: $base_color;
+
+        height: 80px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+}
+
+/*-----clicked style-----*/
+
+.btn_line_clicked::before{
+    transform: rotate(45deg);
+    position: absolute;
+    top: 50%;
+    background-color: $base_color;
+
+    transition-duration: 0.3s;
+}
+.btn_line_clicked::after{
+    transform: rotate(-45deg);
+    position: absolute;
+    top: 50%;
+    background-color: $base_color;
+
+    transition-duration: 0.3s;
+}
+.btn_line_clicked{
+    background-color: rgba(255, 255, 255, 0) !important;
+
+    transition-duration: 0.3s;
+}
+
+.menu_body_clicked{
+    transition-duration: 0.5s;
+
+    right: 0;
+    opacity: 1;
+    overflow: hidden;
 }
